--- a/src/app/events/contact/contact.component.html
+++ b/src/app/events/contact/contact.component.html
@@ -1,1 +1,52 @@
-<p>contact works!</p>
+<!-- <mat-card>
+  <mat-card-header>
+    <mat-card-title>Contact Us</mat-card-title>
+    <mat-card-subtitle>We'd love to hear from you!</mat-card-subtitle>
+  </mat-card-header>
+
+  <mat-card-content>
+    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" />
+        <mat-error
+          *ngIf="formControls.name.invalid && formControls.name.touched"
+        >
+          Name is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" />
+        <mat-error
+          *ngIf="formControls.email.invalid && formControls.email.touched"
+        >
+          A valid email is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Phone (Optional)</mat-label>
+        <input matInput formControlName="phone" />
+      </mat-form-field>
+
+      <div class="form-actions">
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          [disabled]="contactForm.invalid"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
+  </mat-card-content>
+
+  <mat-card-footer *If="submitted">
+    <div class="submission-message">
+      Thank you for contacting us! We will get back to you soon.
+    </div>
+  </mat-card-footer>
+</mat-card> -->
