--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -1,26 +1,37 @@
 @if(event) {
-<div class="event-card">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>{{ event.title }}</mat-card-title>
-      <mat-card-subtitle>{{
-        event.date | date : "fullDate"
-      }}</mat-card-subtitle>
-    </mat-card-header>
-    <!-- <img mat-card-image [src]="event.imageUrl" alt="Event image" /> -->
-    <mat-card-content>
-      <p>{{ event.details }}</p>
-      <p><strong>Locație:</strong> {{ event.location }}</p>
-      <p><strong>Cost:</strong> {{ event.cost }} RON</p>
-      <p><strong>Locuri disponibile:</strong> {{ event.availableSpots }}</p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button color="primary" routerLink="/contact">
-        Vin și eu!
-      </button>
-    </mat-card-actions>
-  </mat-card>
+<div class="container">
+  <div class="event-card">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <div class="mat-display-4">
+            {{ event.title }}
+          </div>
+        </mat-card-title>
+        <mat-card-subtitle>{{
+          event.date | date : "fullDate"
+        }}</mat-card-subtitle>
+      </mat-card-header>
+      <!-- <img
+        mat-card-image
+        src="https://picsum.photos/500/500"
+        alt="Event image"
+        class="event-image"
+      /> -->
+      <mat-card-content>
+        <p>{{ event.details }}</p>
+        <p><strong>Locație:</strong> {{ event.location }}</p>
+        <p><strong>Cost:</strong> {{ event.cost }} RON</p>
+        <p><strong>Locuri disponibile:</strong> {{ event.availableSpots }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary" routerLink="/contact">
+          Înscriere
+        </button>
+      </mat-card-actions>
+    </mat-card>
 
-  <app-contact></app-contact>
+    <app-contact></app-contact>
+  </div>
 </div>
 }
