--- a/src/app/events/contact/contact.component.html
+++ b/src/app/events/contact/contact.component.html
@@ -1,7 +1,7 @@
-<!-- <mat-card>
+<mat-card>
   <mat-card-header>
     <mat-card-title>Contact Us</mat-card-title>
-    <mat-card-subtitle>We'd love to hear from you!</mat-card-subtitle>
+    <!-- <mat-card-subtitle>We'd love to hear from you!</mat-card-subtitle> -->
   </mat-card-header>
 
   <mat-card-content>
@@ -44,9 +44,9 @@
     </form>
   </mat-card-content>
 
-  <mat-card-footer *If="submitted">
+  <mat-card-footer *ngIf="submitted">
     <div class="submission-message">
       Thank you for contacting us! We will get back to you soon.
     </div>
   </mat-card-footer>
-</mat-card> -->
+</mat-card>
