--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -30,7 +30,7 @@
         </button>
       </mat-card-actions>
     </mat-card>
-    <!-- <app-contact></app-contact> -->
+    <app-contact class="contact-card"></app-contact>
     <app-countdown [targetDate]="event.date"></app-countdown>
   </div>
 </div>
