Made the countdown better

--- a/src/app/events/countdown/countdown.component.html
+++ b/src/app/events/countdown/countdown.component.html
@@ -2,6 +2,7 @@
 
 <div class="count-down-timer">
   <p>Dată: {{ currentTime }}</p>
+  <p>{{ statusMessage }}</p>
   <div class="wrapper">
     <div class="description">
       <p>Zile</p>
