--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ html {
   color-scheme: light dark;
   @include mat.theme(
     (
-      color: mat.$violet-palette,
+      color: mat.$green-palette,
       typography: (
         plain-family: Roboto,
         bold-weight: 1100,
