added social link

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,12 @@
 <mat-card-footer>
-  <p>© 2025</p>
+  <div class="container">
+    <a
+      href="https://www.facebook.com/clubuloamenilorsinguripitesti"
+      target="_blank"
+      mat-icon-button
+    >
+      <mat-icon>facebook</mat-icon>
+    </a>
+    <p>© 2025</p>
+  </div>
 </mat-card-footer>
