--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -1,37 +1,39 @@
-@if(event) {
-<div class="container">
-  <div class="event-card">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <div class="mat-display-4">
-            {{ event.title }}
-          </div>
-        </mat-card-title>
-        <mat-card-subtitle>{{
-          event.date | date : "fullDate"
-        }}</mat-card-subtitle>
-      </mat-card-header>
-      <!-- <img
+<div *ngIf="event$ | async as event">
+  <div class="container">
+    <div class="event-card">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>
+            <div class="mat-display-4">
+              {{ event.title }}
+            </div>
+          </mat-card-title>
+          <mat-card-subtitle>{{
+            event.date | date : "fullDate"
+          }}</mat-card-subtitle>
+        </mat-card-header>
+        <!-- <img
         mat-card-image
         src="https://picsum.photos/500/500"
         alt="Event image"
         class="event-image"
       /> -->
-      <mat-card-content>
-        <p>{{ event.details }}</p>
-        <p><strong>Locație:</strong> {{ event.location }}</p>
-        <p><strong>Cost:</strong> {{ event.cost }} RON</p>
-        <p><strong>Locuri disponibile:</strong> {{ event.availableSpots }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button color="primary" routerLink="/contact">
-          Înscriere
-        </button>
-      </mat-card-actions>
-    </mat-card>
-    <app-contact class="contact-card"></app-contact>
-    <app-countdown [targetDate]="event.date"></app-countdown>
+        <mat-card-content>
+          <p>{{ event.details }}</p>
+          <p><strong>Locație:</strong> {{ event.location }}</p>
+          <!-- <p><strong>Cost:</strong> {{ event.cost }} RON</p> -->
+          <p><strong>Cost:</strong> 60 RON</p>
+          <p><strong>Locuri disponibile:</strong> {{ event.availableSpots }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" routerLink="/contact">
+            Înscriere
+          </button>
+        </mat-card-actions>
+      </mat-card>
+      <app-contact class="contact-card"></app-contact>
+      {{ event | json }}
+      <app-countdown [targetDate]="event.date"></app-countdown>
+    </div>
   </div>
 </div>
-}
