--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -23,7 +23,14 @@
           <p><strong>Locație:</strong> {{ event.location }}</p>
           <!-- <p><strong>Cost:</strong> {{ event.cost }} RON</p> -->
           <p><strong>Cost:</strong> 60 RON</p>
-          <p><strong>Locuri disponibile:</strong> {{ event.availableSpots }}</p>
+          <p>
+            <strong>Locuri disponibile:</strong> {{ event.availableSpots }} /
+            {{
+              event.location === "pitesti"
+                ? eventService.availableSpotsPitesti
+                : eventService.availableSpotsBucuresti
+            }}
+          </p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button color="primary" routerLink="/contact">
