refactor styles and markup for improved layout and aesthetics; remove unused analytics code

--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -39,7 +39,7 @@
         </mat-card-actions>
       </mat-card>
       <app-contact class="contact-card"></app-contact>
-      {{ event | json }}
+      <!-- {{ event | json }} -->
       <app-countdown [targetDate]="event.date"></app-countdown>
     </div>
   </div>
