--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @use "@angular/material" as mat;
+@include mat.core();
 
 html {
   color-scheme: light dark;
@@ -18,6 +19,8 @@ html {
 
 // global styles
 body {
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
   font-family: "Gill Sans", sans-serif;
   font-size: 20px;
   line-height: 1.6;
