--- a/src/app/events/countdown/countdown.component.scss
+++ b/src/app/events/countdown/countdown.component.scss
@@ -2,7 +2,8 @@
   box-shadow: 2px 6px 9px 2px rgb(0 0 0 / 20%);
   text-align: center;
   background-color: #313b3f;
-  max-width: 400px;
+  // max-width: 400px;
+  // max-width: 50%;
   margin: 20px auto;
   color: white;
   border-radius: 6px;
