--- a/src/app/events/home/home.component.scss
+++ b/src/app/events/home/home.component.scss
@@ -1,4 +1,16 @@
+.container {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.event-card {
+  width: 100%;
+  max-width: 900px;
+}
+
 .contact-card {
   display: flex;
+  justify-content: center;
   margin-top: 10px;
 }
