--- a/src/app/events/contact/contact.component.html
+++ b/src/app/events/contact/contact.component.html
@@ -1,5 +1,9 @@
 <div class="container">
-  <mat-card class="example-card" appearance="outlined">
+  <mat-card
+    *ngIf="!(hideForm$ | async); else thankYouForRegistering"
+    class="example-card"
+    appearance="outlined"
+  >
     <mat-card-header>
       <mat-card-title>Formular de Înscriere</mat-card-title>
     </mat-card-header>
@@ -67,8 +71,12 @@
             >Regulamentului GDPR</a
           >
         </mat-checkbox>
-        <mat-error *ngIf="contactForm.get('gdpr')?.invalid">
-          Trebuie să acceptați termenii GDPR pentru a trimite formularul.
+        <mat-error
+          *ngIf="contactForm.get('gdpr')?.invalid && contactForm.touched"
+        >
+          <small>
+            Trebuie să acceptați termenii GDPR pentru a trimite formularul.
+          </small>
         </mat-error>
         <span
           *ngIf="
@@ -91,3 +99,18 @@
     </mat-card-actions>
   </mat-card>
 </div>
+
+<ng-template #thankYouForRegistering>
+  <div>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <div class="mat-display-4">Mulțumim pentru înscriere!</div>
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>Vă așteptăm la evenimentul nostru!</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</ng-template>
