--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<app-under-construction class="container under-construction"></app-under-construction>
+
+<!-- <router-outlet
+  *ngIf="!underConstruction; else underConstruction"
+></router-outlet> -->
 <app-footer></app-footer>
