add confidentiality component and update routing; remove under construction feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-header></app-header>
-<app-under-construction class="container under-construction"></app-under-construction>
-
-<!-- <router-outlet
-  *ngIf="!underConstruction; else underConstruction"
-></router-outlet> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
