add navigation functionality to header and confidentiality components; update event location display

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar>
-  <span>Clubul Oamenilor Singuri</span>
+  <div (click)="navigateHome()" class="header-title">
+    <span>Clubul Oamenilor Singuri</span>
+  </div>
 </mat-toolbar>
 
 <hr />
