--- a/src/app/events/contact/contact.component.scss
+++ b/src/app/events/contact/contact.component.scss
@@ -1,3 +1,8 @@
 mat-form-field {
   width: 100%;
 }
+.confidentiality-link {
+  color: #007bff;
+  cursor: pointer;
+  text-decoration: underline;
+}
