--- a/src/app/core/misc/confidentiality/confidentiality.component.html
+++ b/src/app/core/misc/confidentiality/confidentiality.component.html
@@ -250,4 +250,18 @@
       </div>
     </div>
   </div>
+  <ng-container *ngTemplateOutlet="navigateHome"></ng-container>
 </div>
+
+<ng-template #navigateHome>
+  <div class="row justify-content-center mt-4">
+    <button
+      mat-raised-button
+      color="primary"
+      class="big-button"
+      (click)="goHome()"
+    >
+      Înapoi
+    </button>
+  </div>
+</ng-template>
