update event date format in home component for improved readability

--- a/src/app/events/home/home.component.html
+++ b/src/app/events/home/home.component.html
@@ -6,7 +6,7 @@
           <mat-card-header>
             <mat-card-title>
               <div class="mat-display-4">
-                {{ event.date | date : "fullDate" }}
+                {{ event.date | date : "EEEE, d MMMM, 'ora' HH:mm" }}
               </div>
             </mat-card-title>
             <!-- <mat-card-subtitle>
